--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,46 +21,38 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|left"
-            android:text="@string/activity_login_login_account" />
-
         <EditText
             android:id="@+id/et_login_account"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top" />
-    </LinearLayout>
+            android:layout_gravity="top"
+            android:hint="账号" />
+    </android.support.design.widget.TextInputLayout>
 
-    <LinearLayout
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:text="@string/activity_login_login_password" />
-
         <EditText
             android:id="@+id/et_login_password"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom" />
-    </LinearLayout>
+            android:layout_gravity="bottom"
+            android:hint="密码"/>
+    </android.support.design.widget.TextInputLayout>
+
 
     <Button
+        android:id="@+id/btn_login_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_login_login"
-        android:text="@string/activity_login_login_login"/>
+        android:text="@string/activity_login_login_login"
+        android:layout_gravity="center_horizontal"/>
 
 
 </LinearLayout>
