--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     tools:context=".features.Login.LoginActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -21,6 +22,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <LinearLayout
+        android:id="@+id/lly_root"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,6 +59,6 @@
         android:layout_height="wrap_content"
         android:text="@string/activity_login_login_login"
         android:layout_gravity="center_horizontal"/>
-
+    </LinearLayout>
 
 </LinearLayout>
