--- a/app/src/main/res/layout/activity_my_drag.xml
+++ b/app/src/main/res/layout/activity_my_drag.xml
@@ -1,18 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<com.sola_sky.zyt.linktolove.view.DragViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
+<layout >
+    <data>
+        <variable
+            name="content" type="String" />
+        <variable
+            name="name"
+            type="String" />
+        <variable
+            name="name2"
+            type="String" />
+    </data>
+<com.sola_sky.zyt.linktolove.view.ViewGroupDrag xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/root"
     android:background="#FF0000FF"
     tools:context="com.sola_sky.zyt.linktolove.features.test.MyDragActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FF00FF00"
-        android:text="Content" />
+        android:text="Content"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/btn"
+            android:text="@{name2}"
+            android:click="@{name}"
+            android:layout_gravity="right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:gravity="right"
+            android:text="@{content}"/>
+        </LinearLayout>
 
     <TextView
         android:layout_width="200dp"
@@ -20,5 +47,6 @@
         android:background="#FFFF0000"
         android:text="Menu"
         android:gravity="center"/>
-</com.sola_sky.zyt.linktolove.view.DragViewGroup>
+</com.sola_sky.zyt.linktolove.view.ViewGroupDrag>
 
+</layout>
